fix: some errors of deprecated api and cors for firefox

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -32,25 +32,25 @@
     <meta name="msapplication-TileColor" content="#131212" />
     <meta name="theme-color" content="#131212" />
     <link
-      rel="preload"
+      rel="prefetch"
       href="fonts/open-sans.woff2"
       as="font"
       crossorigin="anonymous"
     />
     <link
-      rel="preload"
+      rel="prefetch"
       href="fonts/open-sans-700.woff2"
       as="font"
       crossorigin="anonymous"
     />
     <link
-      rel="preload"
+      rel="prefetch"
       href="fonts/droid-sans-700.woff2"
       as="font"
       crossorigin="anonymous"
     />
     <link
-      rel="preload"
+      rel="prefetch"
       href="fonts/droid-sans.woff2"
       as="font"
       crossorigin="anonymous"
